--- a/onlineshopping/src/main/webapp/WEB-INF/web.xml
+++ b/onlineshopping/src/main/webapp/WEB-INF/web.xml
@@ -12,6 +12,10 @@
             <param-name>contextConfigLocation</param-name>
             <param-value>/WEB-INF/dispatcher-servlet.xml</param-value>
     </init-param>
+    <init-param>
+    	<param-name>throwExceptionIfNoHandlerFound</param-name>
+    	<param-value>true</param-value>
+    </init-param>
   </servlet>
   
   <servlet-mapping>
