--- a/onlineshopping/pom.xml
+++ b/onlineshopping/pom.xml
@@ -46,7 +46,13 @@
 			<artifactId>shoppingbackend</artifactId>
 			<version>0.0.1-SNAPSHOT</version>
 		</dependency>
-
+		
+		<!-- webflow -->
+		<dependency>
+			<groupId>org.springframework.webflow</groupId>
+			<artifactId>spring-webflow</artifactId>
+			<version>2.4.4.RELEASE</version>
+		</dependency>
 
 		<!-- Java EE API -->
 		<dependency>
