--- a/onlineshopping/src/main/webapp/WEB-INF/web.xml
+++ b/onlineshopping/src/main/webapp/WEB-INF/web.xml
@@ -17,7 +17,7 @@
     	<param-value>true</param-value>
     </init-param>
     
-    <!-- multipart config -->
+    <!-- multipart config for picture uploading -->
     <multipart-config>
     	<max-file-size>2097152</max-file-size>
     	<max-request-size>4194384</max-request-size>
@@ -25,9 +25,31 @@
     </multipart-config>
   </servlet>
   
+  <!-- all request go to dispatcher -->
   <servlet-mapping>
   	<servlet-name>dispatcher</servlet-name>
   	<url-pattern>/</url-pattern>
   </servlet-mapping>
+  
+  <!-- Spring Security configuration -->
+  <listener>
+  	<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
+  </listener>
+  
+  <context-param>
+  	<param-name>contextConfigLocation</param-name>
+  	<param-value>/WEB-INF/spring-security.xml</param-value>
+  </context-param>
+  
+  <filter>
+  	<filter-name>springSecurityFilterChain</filter-name>
+  	<filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
+  </filter>  
+  
+  <filter-mapping>
+  	<filter-name>springSecurityFilterChain</filter-name>
+  	<url-pattern>/*</url-pattern>
+  </filter-mapping>
+ 
   
 </web-app>
